# netmeter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
services/: install-macos.sh  install-systemd.sh  install-windows.ps1  netmeter.service
src/netmeter/: __init__.py  __main__.py  cli.py  config.py  dashboard.py  database.py  measure.py  network.py  scheduler.py
tests/: test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_measure.py  test_network.py  test_scheduler.py
